修改了部分图片

--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -337,6 +337,71 @@
         </div>
         <!-- features area end -->
 
+
+        <!-- user area start  -->
+        <section class="users__area pt-100 pb-70 grey-bg">
+            <div class="container">
+                <div class="row wow slideInUp">
+                    <div class="col-xl-7">
+                        <div class="users mb-30">
+                            <div class="section-title-wrapper mb-35">
+                                <span class="section-pre-title"></span>
+                                <h2 class="section-title-2 section-title-3">合作伙伴</h2>
+                            </div>
+                            <div class="brands">
+                                <ul class="brand-line brand__active">
+                                    <li><img class="brand-012" src="assets/img/brands/brand-012.png" alt=""></li>
+                                    <li><img class="brand-022" src="assets/img/brands/brand-022.png" alt=""></li>
+                                    <li><img class="brand-032" src="assets/img/brands/brand-032.png" alt=""></li>
+                                    <li><img class="brand-012" src="assets/img/brands/brand-012.png" alt=""></li>
+                                    <li><img class="brand-022" src="assets/img/brands/brand-022.png" alt=""></li>
+                                    <li><img class="brand-032" src="assets/img/brands/brand-032.png" alt=""></li>
+                                </ul>
+                                <ul class="brand-line second p-relative brand__active">
+                                    <li><img class="brand-042" src="assets/img/brands/brand-042.png" alt=""></li>
+                                    <li><img class="brand-052" src="assets/img/brands/brand-052.png" alt=""></li>
+                                    <li><img class="brand-062" src="assets/img/brands/brand-062.png" alt=""></li>
+                                    <li><img class="brand-042" src="assets/img/brands/brand-042.png" alt=""></li>
+                                    <li><img class="brand-052" src="assets/img/brands/brand-052.png" alt=""></li>
+                                    <li><img class="brand-062" src="assets/img/brands/brand-062.png" alt=""></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-5">
+                        <div class="testimonial__active">
+                            <div class="testimonial">
+                                <div class="testimonial__content p-relative">
+                                    <div class="quote">
+                                        <img class="quoteImg" src="assets/img/icon/quote.png" alt="">
+                                    </div>
+                                    <ul class="star st-red">
+                                        <li><i class="fas fa-star"></i></li>
+                                        <li><i class="fas fa-star"></i></li>
+                                        <li><i class="fas fa-star"></i></li>
+                                        <li><i class="fas fa-star"></i></li>
+                                        <li><i class="fas fa-star"></i></li>
+                                    </ul>
+                                    <p>我公司在国内外建有自己的网络体系，以北京为
+                                        核心业务辐射世界各地。国内已经在天津、青岛、
+                                        大连、上海、广州、深圳等各主要港口城市设有
+                                        自己的办事处；国外在欧洲，美洲，澳洲，东南
+                                        亚，中东等地都拥有自己的合作代理。经过多年
+                                        的发展，我公司已经与中外多家船公司、航空公
+                                        司、快件公司、中铁快运、集装箱堆场、大型车
+                                        队等签订了代理协议和服务合约，可以完全便利
+                                        地为客户提供进出口全程的门到门物流服务。</p>
+                                </div>
+
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- users area end -->
+
     </main>
     <!-- footer area start  -->
     <footer>
