--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -273,7 +273,7 @@
                             <div class="col-lg-4" style="width: 42%; float: right; margin: 4%; margin-bottom: 5px;">
                                 <input type="text" name="wbNum" value="运单号" placeholder="运单号">
                             </div>
-                            <button type="submit" class="request-quote shutter-btn">查询运单</button>
+                            <button type="submit" class="request-quote shutter-btn" style="margin: auto; width: 25%">查询运单</button>
                         </div>
                     </div>
                 </form>
@@ -488,163 +488,93 @@
 
 
 
-    <!-- user area start  -->
-    <section class="users__area pt-100 pb-70 grey-bg">
-        <div class="container">
-            <div class="row wow slideInUp">
-                <div class="col-xl-7">
-                    <div class="users mb-30">
-                        <div class="section-title-wrapper mb-35">
-                            <span class="section-pre-title"></span>
-                            <h2 class="section-title-2 section-title-3">合作伙伴</h2>
-                        </div>
-                        <div class="brands">
-                            <ul class="brand-line brand__active">
-                                <li><img class="brand-012" src="assets/img/brands/brand-012.png" alt=""></li>
-                                <li><img class="brand-022" src="assets/img/brands/brand-022.png" alt=""></li>
-                                <li><img class="brand-032" src="assets/img/brands/brand-032.png" alt=""></li>
-                                <li><img class="brand-012" src="assets/img/brands/brand-012.png" alt=""></li>
-                                <li><img class="brand-022" src="assets/img/brands/brand-022.png" alt=""></li>
-                                <li><img class="brand-032" src="assets/img/brands/brand-032.png" alt=""></li>
-                            </ul>
-                            <ul class="brand-line second p-relative brand__active">
-                                <li><img class="brand-042" src="assets/img/brands/brand-042.png" alt=""></li>
-                                <li><img class="brand-052" src="assets/img/brands/brand-052.png" alt=""></li>
-                                <li><img class="brand-062" src="assets/img/brands/brand-062.png" alt=""></li>
-                                <li><img class="brand-042" src="assets/img/brands/brand-042.png" alt=""></li>
-                                <li><img class="brand-052" src="assets/img/brands/brand-052.png" alt=""></li>
-                                <li><img class="brand-062" src="assets/img/brands/brand-062.png" alt=""></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-5">
-                    <div class="testimonial__active">
-                        <div class="testimonial">
-                            <div class="testimonial__content p-relative">
-                                <div class="quote">
-                                    <img class="quoteImg" src="assets/img/icon/quote.png" alt="">
-                                </div>
-                                <ul class="star st-red">
-                                    <li><i class="fas fa-star"></i></li>
-                                    <li><i class="fas fa-star"></i></li>
-                                    <li><i class="fas fa-star"></i></li>
-                                    <li><i class="fas fa-star"></i></li>
-                                    <li><i class="fas fa-star"></i></li>
-                                </ul>
-                                <p>我公司在国内外建有自己的网络体系，以北京为
-                                    核心业务辐射世界各地。国内已经在天津、青岛、
-                                    大连、上海、广州、深圳等各主要港口城市设有
-                                    自己的办事处；国外在欧洲，美洲，澳洲，东南
-                                    亚，中东等地都拥有自己的合作代理。经过多年
-                                    的发展，我公司已经与中外多家船公司、航空公
-                                    司、快件公司、中铁快运、集装箱堆场、大型车
-                                    队等签订了代理协议和服务合约，可以完全便利
-                                    地为客户提供进出口全程的门到门物流服务。</p>
-                            </div>
-
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- users area end -->
-    <!-- news area start  -->
-    <section class="blog__area pt-100 pb-20">
-        <div class="container">
-            <div class="row wow slideInUp align-items-center">
-                <div class="col-xxl-5 offset-xxl-1 col-xl-5">
-                    <div class="section-title-wrapper section-title-pl-55 mb-35">
-                        <span class="section-pre-title"></span>
-                        <h2 class="section-title-2">新闻</h2>
-                    </div>
-                </div>
-                <div class="col-xxl-5 col-xl-5">
-                    <div class="form__quote mb-35">
-                        <blockquote>
-                            <p>公司新闻动态 </p>
-                        </blockquote>
-                    </div>
-                </div>
-            </div>
-            <div class="row wow slideInUp">
-                <div class="col-xl-4 col-lg-6 col-md-6">
-                    <div class="blog__post mb-30">
-                        <div class="blog__img p-relative">
-                            <div class="blog__thumb">
-                                <a href=""><img id="post-01" src="assets/img/post/post-01.jpg" alt=""></a>
-                            </div>
-                            <div class="blog__date">
-                                <p><span>11-09</span>2015</p>
-                            </div>
-                        </div>
-                        <div class="blog__content">
-                            <span></span>
-                            <h4><a href="">吴清一教授参观我司正中集... </a></h4>
-                            <p>
-                                2015年8月24日，原北京科技大学教授、物流研究所所长吴清一教授在张永清、徐峰两位副总裁的陪同下来到位于...</p>
-                            <a href="news.html">查看详情</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-4 col-lg-6 col-md-6">
-                    <div class="blog__post mb-30">
-                        <div class="blog__img p-relative">
-                            <div class="blog__thumb">
-                                <a href=""><img id="post-02" src="assets/img/post/post-02.jpg" alt=""></a>
-                            </div>
-                            <div class="blog__date">
-                                <p><span>11-09</span>2015</p>
-                            </div>
-                        </div>
-                        <div class="blog__content">
-                            <span></span>
-                            <h4><a href="">智能制造今天国际亮相上海... </a></h4>
-                            <p>
-                                8月26日，第七届中国（上海）国际锂电工业展览会在上海新国际博览中心隆重开幕，展览为期三天，今天国际...</p>
-                            <a href="news.html">查看详情</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-4 col-lg-6 col-md-6">
-                    <div class="blog__post mb-30">
-                        <div class="blog__img p-relative">
-                            <div class="blog__thumb">
-                                <a href=""><img id="post-03" src="assets/img/post/post-03.jpg" alt=""></a>
-                            </div>
-                            <div class="blog__date">
-                                <p><span>11-09</span>2015</p>
-                            </div>
-                        </div>
-                        <div class="blog__content">
-                            <span></span>
-                            <h4>
-                                <a href="">今天国际被评为中国银行...</a>
-                            </h4>
-                            <p>
-                                鉴于今天国际的优良信誉及良好的发展前景，中国银行深圳分行将我司列为分行级重点客户。2015年7月31日，中...</p>
-                            <a href="news.html">查看详情</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- news area end -->
+<!--    &lt;!&ndash; news area start  &ndash;&gt;-->
+<!--    <section class="blog__area pt-100 pb-20">-->
+<!--        <div class="container">-->
+<!--            <div class="row wow slideInUp align-items-center">-->
+<!--                <div class="col-xxl-5 offset-xxl-1 col-xl-5">-->
+<!--                    <div class="section-title-wrapper section-title-pl-55 mb-35">-->
+<!--                        <span class="section-pre-title"></span>-->
+<!--                        <h2 class="section-title-2">新闻</h2>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="col-xxl-5 col-xl-5">-->
+<!--                    <div class="form__quote mb-35">-->
+<!--                        <blockquote>-->
+<!--                            <p>公司新闻动态 </p>-->
+<!--                        </blockquote>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="row wow slideInUp">-->
+<!--                <div class="col-xl-4 col-lg-6 col-md-6">-->
+<!--                    <div class="blog__post mb-30">-->
+<!--                        <div class="blog__img p-relative">-->
+<!--                            <div class="blog__thumb">-->
+<!--                                <a href=""><img id="post-01" src="assets/img/post/post-01.jpg" alt=""></a>-->
+<!--                            </div>-->
+<!--                            <div class="blog__date">-->
+<!--                                <p><span>11-09</span>2015</p>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                        <div class="blog__content">-->
+<!--                            <span></span>-->
+<!--                            <h4><a href="">吴清一教授参观我司正中集... </a></h4>-->
+<!--                            <p>-->
+<!--                                2015年8月24日，原北京科技大学教授、物流研究所所长吴清一教授在张永清、徐峰两位副总裁的陪同下来到位于...</p>-->
+<!--                            <a href="news.html">查看详情</a>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="col-xl-4 col-lg-6 col-md-6">-->
+<!--                    <div class="blog__post mb-30">-->
+<!--                        <div class="blog__img p-relative">-->
+<!--                            <div class="blog__thumb">-->
+<!--                                <a href=""><img id="post-02" src="assets/img/post/post-02.jpg" alt=""></a>-->
+<!--                            </div>-->
+<!--                            <div class="blog__date">-->
+<!--                                <p><span>11-09</span>2015</p>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                        <div class="blog__content">-->
+<!--                            <span></span>-->
+<!--                            <h4><a href="">智能制造今天国际亮相上海... </a></h4>-->
+<!--                            <p>-->
+<!--                                8月26日，第七届中国（上海）国际锂电工业展览会在上海新国际博览中心隆重开幕，展览为期三天，今天国际...</p>-->
+<!--                            <a href="news.html">查看详情</a>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="col-xl-4 col-lg-6 col-md-6">-->
+<!--                    <div class="blog__post mb-30">-->
+<!--                        <div class="blog__img p-relative">-->
+<!--                            <div class="blog__thumb">-->
+<!--                                <a href=""><img id="post-03" src="assets/img/post/post-03.jpg" alt=""></a>-->
+<!--                            </div>-->
+<!--                            <div class="blog__date">-->
+<!--                                <p><span>11-09</span>2015</p>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                        <div class="blog__content">-->
+<!--                            <span></span>-->
+<!--                            <h4>-->
+<!--                                <a href="">今天国际被评为中国银行...</a>-->
+<!--                            </h4>-->
+<!--                            <p>-->
+<!--                                鉴于今天国际的优良信誉及良好的发展前景，中国银行深圳分行将我司列为分行级重点客户。2015年7月31日，中...</p>-->
+<!--                            <a href="news.html">查看详情</a>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </section>-->
+<!--    &lt;!&ndash; news area end &ndash;&gt;-->
     <!-- cta area start  -->
     <div class="cta__area theme-bg">
         <div class="container">
             <div class="row align-items-center wow slideInUp">
-                <div class="col-lg-3 col-md-12">
-                    <form action="#">
-                        <div class="mail-address">
-                            <input type="text" placeholder="输入邮箱地址">
-                            <button type="submit"><i class="fal fa-arrow-right"></i></button>
-                        </div>
-                    </form>
-                </div>
+
                 <div class="col-lg-9 col-md-12">
                     <div class="cta__content f-right">
                         <ul>
@@ -688,18 +618,15 @@
     <section class="footer__area pt-100 pb-70 footer-bg">
         <div class="container">
             <div class="row wow slideInUp">
-                <div class="col-xl-4 col-lg-6 col-md-6">
+                <div class="col-xl-6 col-lg-6 col-md-6">
                     <div class="footer__widget mb-30">
                         <div class="footer__widget-title">
                             <h5>关于我们</h5>
                         </div>
-                        <p>  北京中凯国际物流有限公司成立于2008年，是经国家商务部
-                            批准，由北京首都科技集团进出口部、北京利凯国际货运有
-                            限公司和北京联合诚信科贸有限公司三方投资组建而成。我
-                            公司以空运、航运、陆运为核心，可为客户提供专业的全程
-                            物流供应链解决方案。具有良好的口碑和服务能力，为各类
-                            商品的报关和运输提供专业服务。我们的目标是快捷物流，
-                            服务互联世界。
+                        <p>  北京中凯国际物流有限公司成立于2008年，是经国家商务部批准，由北京首都科技集团进出口
+                            部、北京利凯国际货运有限公司和北京联合诚信科贸有限公司三方投资组建而成。我公司以空运
+                            、航运、陆运为核心，可为客户提供专业的全程物流供应链解决方案。具有良好的口碑和服务能
+                            力，为各类商品的报关和运输提供专业服务。我们的目标是快捷物流，服务互联世界。
                         </p>
                         <div class="footer__address">
                             <img id="pin-icon" src="assets/img/icon/pin-icon.png" alt="">
@@ -729,8 +656,8 @@
                 <!--                            </ul>-->
                 <!--                        </div>-->
                 <!--                    </div>-->
-                <div class="col-xl-4 col-lg-6 col-md-6">
-                    <div class="footer__widget mb-30">
+                <div class="col-xl-6 col-lg-6 col-md-6" style="float:right">
+                    <div class="footer__widget mb-30" style="float:right">
                         <div class="footer__widget-title">
                             <h5>我们的服务</h5>
                         </div>
@@ -744,45 +671,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-xl-4 col-lg-6 col-md-6">
-                    <div class="footer__widget mb-30 ml--40">
-                        <div class="footer__widget-title">
-                            <h5>新闻列表</h5>
-                        </div>
-                        <div class="footer__blog">
-                            <div class="blog__sm-item mb-30 fix">
-                                <div class="blog__sm-thumb float-start mr-20">
-                                    <a href="">
-                                        <img id="blog-sm-1" src="assets/img/news/footer/blog-sm-1.jpg" alt="">
-                                    </a>
-                                </div>
-                                <div class="blog__sm-content">
-                                    <div class="blog__sm-meta">
-                                        <span>2015-11-09</span>
-                                    </div>
-                                    <h3 class="blog__sm-title">
-                                        <a href="">吴清一教授参观我司正中集... </a>
-                                    </h3>
-                                </div>
-                            </div>
-                            <div class="blog__sm-item mb-30 fix">
-                                <div class="blog__sm-thumb float-start mr-20">
-                                    <a href="">
-                                        <img id="blog-sm-2" src="assets/img/news/footer/blog-sm-2.jpg" alt="">
-                                    </a>
-                                </div>
-                                <div class="blog__sm-content">
-                                    <div class="blog__sm-meta">
-                                        <span>2015-11-09</span>
-                                    </div>
-                                    <h3 class="blog__sm-title">
-                                        <a href="">智能制造今天国际亮相上海...</a>
-                                    </h3>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+
             </div>
         </div>
     </section>
