--- a/src/main/resources/templates/news.html
+++ b/src/main/resources/templates/news.html
@@ -220,10 +220,10 @@
             </div>
         </div>
         <!-- page title area end -->
-        <section class="n-blog__area pt-120 pb-120">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8">
+        <section class="n-blog__area pt-120 pb-120" >
+            <div class="container" >
+                <div class="row" >
+                    <div class="col-lg-8" style="margin: auto">
                         <div class="n-blog__left pr-10">
                             <div class="n-blog__single mb-40">
                                 <div class="n-blog__img">
@@ -308,68 +308,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4">
-                        <div class="news-sidebar">
-                            <div class="row">
 
-                                <div class="col-lg-12 col-md-12">
-                                    <div class="n-sidebar-widget">
-                                        <div class="sidebar-title">
-                                            <h4><span>01.</span> 查找</h4>
-                                        </div>
-                                        <div class="n-sidebar-search">
-                                            <input type="text" placeholder="输入关键字...">
-                                            <a href="#"><i class="fal fa-search"></i></a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-lg-12 col-md-12">
-                                    <div class="n-sidebar-widget">
-                                        <div class="sidebar-title">
-                                            <h4><span>02.</span> 热度榜</h4>
-                                        </div>
-                                        <div class="n-sidebar-feed">
-                                            <ul>
-                                                <li>
-                                                    <div class="feed-number">
-                                                        <span>01</span>
-                                                    </div>
-                                                    <div class="feed-content">
-                                                        <h6><a href="">吴清一教授参观我司正中集...</a></h6>
-                                                        <span class="feed-date">
-                                                            <i class="fal fa-calendar-alt"></i> 2015-11-09
-                                                        </span>
-                                                    </div>
-                                                </li>
-                                                <li>
-                                                    <div class="feed-number">
-                                                        <span>02</span>
-                                                    </div>
-                                                    <div class="feed-content">
-                                                        <h6><a href="">智能制造今天国际亮相上海... </a></h6>
-                                                        <span class="feed-date">
-                                                            <i class="fal fa-calendar-alt"></i> 2015-11-09
-                                                        </span>
-                                                    </div>
-                                                </li>
-                                                <li>
-                                                    <div class="feed-number">
-                                                        <span>03</span>
-                                                    </div>
-                                                    <div class="feed-content">
-                                                        <h6><a href="">今天国际被评为中国银行...</a></h6>
-                                                        <span class="feed-date">
-                                                            <i class="fal fa-calendar-alt"></i> 2015-11-09
-                                                        </span>
-                                                    </div>
-                                                </li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
                 </div>
             </div>
         </section>
