--- a/src/main/resources/templates/back/userWayBill.html
+++ b/src/main/resources/templates/back/userWayBill.html
@@ -108,6 +108,12 @@
                                             </p>
                                         </div>
                                         <div style="width: 79%; float: right">
+                                            <p class="item">委托方:
+                                                <span class="badge badge-rounded badge-outline-light"
+                                                      th:text="${detail.wayBill.wbCompany}"></span>
+                                            </p>
+                                        </div>
+                                        <div style="width: 79%; float: right">
                                             <p class="item">运单说明信息:
                                                 <span class="badge badge-rounded badge-outline-light"
                                                       th:text="${detail.wayBill.wbInfo}"></span>
