--- a/src/main/resources/templates/back/coyDetailPage.html
+++ b/src/main/resources/templates/back/coyDetailPage.html
@@ -70,7 +70,7 @@
                     <line x1="9" x2="9.01" y1="9" y2="9"></line>
                     <line x1="15" x2="15.01" y1="9" y2="9"></line>
                 </svg>
-                <strong>欢迎使用 xx 公司后台管理</strong>
+                <strong>欢迎使用北京中凯国际物流有限公司业务管理系统</strong>
             </div>
         </nav>
     </div>
