--- a/src/main/resources/templates/back/wayBillDetailPage.html
+++ b/src/main/resources/templates/back/wayBillDetailPage.html
@@ -70,7 +70,7 @@
                     <line x1="9" x2="9.01" y1="9" y2="9"></line>
                     <line x1="15" x2="15.01" y1="9" y2="9"></line>
                 </svg>
-                <strong>欢迎使用 xx 公司后台管理</strong>
+                <strong>欢迎使用北京中凯国际物流有限公司业务管理系统</strong>
             </div>
         </nav>
     </div>
@@ -147,6 +147,11 @@
                                     </div>
                                     <div class="modal-body">
                                         <form method="post" th:action="@{/wb/setWbInfo}">
+                                            <div class="mb-3">
+                                                <label class="mb-1"><strong>委托方(公司)</strong></label>
+                                                <input class="form-control" name="wbCompany" placeholder="委托方(公司)"
+                                                       th:value="${detail.wayBill.wbCompany} ? ${detail.wayBill.wbCompany} : ''" type="text">
+                                            </div>
                                             <div class="mb-3">
                                                 <label class="mb-1"><strong>收件人姓名</strong></label>
                                                 <input class="form-control" name="wbReceName" placeholder="收件人姓名"
@@ -266,6 +271,12 @@
                                                       th:case="6">已签收</span>
                                                 <span class="badge badge-rounded badge-outline-light"
                                                       th:case="*">未知状态</span>
+                                            </p>
+                                        </div>
+                                        <div style="width: 79%; float: right">
+                                            <p class="item">运单委托公司:
+                                                <span class="badge badge-rounded badge-outline-light"
+                                                      th:text="${detail.wayBill.wbCompany}"></span>
                                             </p>
                                         </div>
                                         <div style="width: 79%; float: right">
