在关于页面新增企业领导介绍

--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -337,6 +337,81 @@
         </div>
         <!-- features area end -->
 
+        <!-- leader area start -->
+        <div class="features-box-area grey-light-bg pt-110 pb-120" style="flex-direction: column;">
+            <div class="container" style="flex-direction: column;">
+                <div class="row">
+                    <div class="col-xl-4">
+                        <div class="card">
+                            <img class="card-img-top img-fluid" id="leader1" src="../../../../files/image/about/leader1.jpg" alt="leader1 image cap">
+                            <div class="card-header">
+                                <h5 class="card-title">姓名  职位</h5>
+                            </div>
+                            <div class="card-body">
+                                <p class="card-text">领导简介：XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-4">
+                        <div class="card">
+                            <img class="card-img-top img-fluid" id="leader2" src="../../../../files/image/about/leader2.jpg" alt="leader2 image cap">
+                            <div class="card-header">
+                                <h5 class="card-title">姓名  职位</h5>
+                            </div>
+                            <div class="card-body">
+                                <p class="card-text">领导简介：XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-4">
+                        <div class="card">
+                            <img class="card-img-top img-fluid" id="leader3" src="../../../../files/image/about/leader3.jpg" alt="leader3 image cap">
+                            <div class="card-header">
+                                <h5 class="card-title">姓名  职位</h5>
+                            </div>
+                            <div class="card-body">
+                                <p class="card-text">领导简介：XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-4">
+                        <div class="card">
+                            <img class="card-img-top img-fluid" id="leader4" src="../../../../files/image/about/leader4.jpg" alt="leader4 image cap">
+                            <div class="card-header">
+                                <h5 class="card-title">姓名  职位</h5>
+                            </div>
+                            <div class="card-body">
+                                <p class="card-text">领导简介：XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-4">
+                        <div class="card">
+                            <img class="card-img-top img-fluid" id="leader5" src="../../../../files/image/about/leader5.jpg" alt="leader5 image cap">
+                            <div class="card-header">
+                                <h5 class="card-title">姓名  职位</h5>
+                            </div>
+                            <div class="card-body">
+                                <p class="card-text">领导简介：XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-4">
+                        <div class="card">
+                            <img class="card-img-top img-fluid" id="leader6" src="../../../../files/image/about/leader6.jpg" alt="leader6 image cap">
+                            <div class="card-header">
+                                <h5 class="card-title">姓名  职位</h5>
+                            </div>
+                            <div class="card-body">
+                                <p class="card-text">领导简介：XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- leader area end -->
 
         <!-- user area start  -->
         <section class="users__area pt-100 pb-70 grey-bg">
