在关于页面企业领导介绍修改

--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -340,8 +340,16 @@
         <!-- leader area start -->
         <div class="features-box-area grey-light-bg pt-110 pb-120" style="flex-direction: column;">
             <div class="container" style="flex-direction: column;">
+                <div class="row wow slideInUp">
+                    <div class="col-xl-12">
+                        <div class="section-title text-center mb-60">
+                            <span class="category"></span>
+                            <h2>我们的领导</h2>
+                        </div>
+                    </div>
+                </div>
                 <div class="row">
-                    <div class="col-xl-4">
+                    <div class="col-xl-4" >
                         <div class="card">
                             <img class="card-img-top img-fluid" id="leader1" src="../../../../files/image/about/leader1.jpg" alt="leader1 image cap">
                             <div class="card-header">
